[package]
name = "ircd-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] } # Async runtime
toml = "0.8" # For configuration parsing
serde = { version = "1.0", features = ["derive"] } # For configuration deserialization
thiserror = "2.0.11" # For error handling
tracing = "0.1" # Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Logging setup
clap = { version = "4.5", features = ["derive"] } # Command line argument parsing
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3 